添加表格组件

--- a/lege-management/src/views/TaskManagement/taskManagement.module.scss
+++ b/lege-management/src/views/TaskManagement/taskManagement.module.scss
@@ -1,12 +1,9 @@
-.taskManagerContainer {
-  .searchFormContainer {
-    padding: 16px 24px;
-    display: flex;
-    justify-content: center;
-    height: 160px;
-    align-items: center;
-  }
+.container {
+  padding: 24px;
   .tableContainer {
-    color: #1890ff;
+    margin-top: 16px;
+    .actionBtn {
+      cursor: pointer;
+    }
   }
 }
