--- a/lege-management/src/views/TaskManagement/taskManagement.module.scss
+++ b/lege-management/src/views/TaskManagement/taskManagement.module.scss
@@ -2,6 +2,9 @@
   padding: 24px;
   .tableContainer {
     margin-top: 16px;
+    .headerBtn {
+      margin: 8px 8px 8px 0;
+    }
     .actionBtn {
       cursor: pointer;
     }
