--- a/lege-management/src/views/Login/login.module.scss
+++ b/lege-management/src/views/Login/login.module.scss
@@ -1,40 +1,128 @@
-$BaseColor:#fff;
-.loginPage {
+@import "@/assets/style/variable";
+@import "@/assets/style/mixins";
+.section-login {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(
+    to bottom,
+    $login-background-dark,
+    $login-background-light
+  );
   position: relative;
-  .loginBox {
-    width: 450px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    color: $BaseColor
+  color: #fff;
+}
+
+.login {
+  &__content {
+    width: 72rem;
+    height: 80%;
+    border-radius: 0.5rem;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+    @include absCenter;
+
+    &--row {
+      height: 100%;
+    }
+
+    &--col {
+      width: inherit;
+      height: 100%;
+
+      &--logo {
+        height: inherit;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &--form {
+        height: inherit;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $login-default-color;
+        clip-path: polygon(15% 0, 100% 0, 100% 100%, 0 100%);
+      }
+    }
+  }
+}
+
+.form {
+  color: $login-default-color;
+  width: 64%;
+
+  &__group:not(:last-child) {
+    margin-bottom: 2rem;
   }
 
-  h1 {
-    font-weight: bold;
-    font-size: 22px;
-    text-align: center;
-    color:$BaseColor;
+  &__input {
+    display: block;
+    width: 90%;
+    padding: 0.3rem 1rem;
+    border: none;
+    outline: none;
+    font-size: 1.3rem;
+    background-color: transparent;
+    color: $color-white;
+    border-bottom: 1px solid $login-background-dark;
+    transition: all 0.3s;
+
+    &:focus {
+      border-bottom: 3px solid $color-white;
+    }
+
+    &:focus:invalid {
+      border-bottom: 3px solid $color-dark;
+    }
+
+    &::-webkit-input-placeholder {
+      color: $color-white;
+    }
   }
-  p {
-    text-align: center;
-    margin: 20px 0;
-  }
-  .title {
+
+  &__label {
+    color: $color-white;
+    display: block;
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    padding: 0 1rem;
     position: relative;
-    &:before, &:after {
-      content: "";
-      width: 100px;
-      height: 2px;
-      position: absolute;
-      background: linear-gradient(to right, rgba(255,255,255,0), #1976D2);
-      left: -20px;
-      top: 18px
-    }
-    &:after {
-      left: auto;
-      background: linear-gradient(to left, rgba(255,255,255,0), #1976D2);
-      right: -20px;
-    }
+    top: -4rem;
+    transition: all 0.3s;
+  }
+
+  &__input:placeholder-shown ~ &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(3rem);
+  }
+}
+
+.btn {
+  &,
+  &:link,
+  &:visited {
+    text-decoration: none;
+    color: $login-default-color;
+    display: inline-block;
+    padding: 0.8rem 2rem;
+    background-color: $color-white;
+    border-radius: 0.4rem;
+    font-size: 1.2rem;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    transform: translateY(-0.2rem);
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+  }
+
+  &:focus {
+    outline: none;
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
 }
