--- a/lege-management/src/assets/style/base/_variable.scss
+++ b/lege-management/src/assets/style/base/_variable.scss
@@ -1,7 +1,13 @@
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+
 $login-background-dark: #424f56;
 $login-background-light: #6b5e4c;
 $login-content-background-dark: #131313;
 $login-default-color: #28b485;
+
+
 $color-black: #000000;
 $color-white: #fff;
 $color-dark: #ff7875;
