--- a/lege-management/src/views/Login/login.module.scss
+++ b/lege-management/src/views/Login/login.module.scss
@@ -1,5 +1,4 @@
-@import "@/assets/style/variable";
-@import "@/assets/style/mixins";
+@import "/src/assets/style/main.scss";
 .section-login {
   width: 100vw;
   height: 100vh;
@@ -13,8 +12,9 @@
 }
 
 .login {
+
   &__content {
-    width: 72rem;
+    width: 72vw;
     height: 80%;
     border-radius: 0.5rem;
     background-color: $color-white;
@@ -42,7 +42,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: $login-default-color;
+        background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
         clip-path: polygon(15% 0, 100% 0, 100% 100%, 0 100%);
       }
     }
@@ -51,78 +51,16 @@
 
 .form {
   color: $login-default-color;
-  width: 64%;
+  width: 72%;
 
-  &__group:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-
-  &__input {
-    display: block;
-    width: 90%;
-    padding: 0.3rem 1rem;
-    border: none;
-    outline: none;
-    font-size: 1.3rem;
-    background-color: transparent;
-    color: $color-white;
-    border-bottom: 1px solid $login-background-dark;
-    transition: all 0.3s;
-
-    &:focus {
-      border-bottom: 3px solid $color-white;
-    }
-
-    &:focus:invalid {
-      border-bottom: 3px solid $color-dark;
-    }
-
-    &::-webkit-input-placeholder {
-      color: $color-white;
-    }
-  }
-
-  &__label {
-    color: $color-white;
-    display: block;
-    font-size: 1.3rem;
+  &_label {
     font-weight: 700;
-    margin-bottom: 1rem;
-    padding: 0 1rem;
-    position: relative;
-    top: -4rem;
-    transition: all 0.3s;
-  }
-
-  &__input:placeholder-shown ~ &__label {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(3rem);
+    color: $color-white;
+    font-size: 1rem;
   }
 }
 
 .btn {
-  &,
-  &:link,
-  &:visited {
-    text-decoration: none;
-    color: $login-default-color;
-    display: inline-block;
-    padding: 0.8rem 2rem;
-    background-color: $color-white;
-    border-radius: 0.4rem;
-    font-size: 1.2rem;
-    transition: all 0.2s;
-  }
-
-  &:hover {
-    transform: translateY(-0.2rem);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-  }
-
-  &:focus {
-    outline: none;
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-  }
+  color: $login-default-color;
+  background-color: $color-white;
 }
