--- a/src/assets/style/base/_variable.scss
+++ b/src/assets/style/base/_variable.scss
@@ -7,6 +7,7 @@ $login-background-light: #6b5e4c;
 $login-content-background-dark: #131313;
 $login-default-color: #28b485;
 
+$search-background-color: #fafafa;
 
 $color-black: #000000;
 $color-white: #fff;
