--- a/src/views/PublishManage/publishManage.module.scss
+++ b/src/views/PublishManage/publishManage.module.scss
@@ -1,12 +1,13 @@
 .publish_section {
   width: 100%;
   height: 100%;
-  padding: 2rem 2rem;
+  padding: 1.5rem 1.5rem;
 
-  &__search {
-  
+  &__form_item {
+    margin: 0;
   }
 
   &__table {
+    margin-top: 1rem;
   }
 }
