--- a/src/assets/style/components/_section.scss
+++ b/src/assets/style/components/_section.scss
@@ -5,7 +5,41 @@
   box-shadow: 0 .1rem 1rem rgba($color-black, 0.15);;
 
   &__btnGround {
+    width: 100%;
     display: flex;
     justify-content: end;
+  }
+}
+
+.form_modal_section {
+  padding: 1rem 1rem;
+  max-height: 80vh;
+  overflow-y: auto;
+
+  &__fieldset {
+    padding: 0 1rem;
+    display: block;
+    width: 100%;
+
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__legend {
+    padding: .4rem 0 !important;
+    text-align: center;
+    margin-bottom: 1rem !important;
+    border: 0 !important;
+    color: $color-white !important;
+    background-color: rgba(#3f85ff, .9);
+    font-size: 1.12rem;
+    font-weight: 600;
+    letter-spacing: .2rem;
+    border-radius: .4rem;
+  }
+
+  &__item {
+    margin-bottom: 1rem !important;
   }
 }
