--- a/src/views/TaskManagement/taskManagement.module.scss
+++ b/src/views/TaskManagement/taskManagement.module.scss
@@ -1,9 +1,9 @@
 .container {
   padding: 24px;
   .tableContainer {
-    margin-top: 16px;
+    
     .headerBtn {
-      margin: 8px 8px 8px 0;
+      padding: 1rem 0;
     }
     .actionBtn {
       cursor: pointer;
